# fda

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
fda/: sec.py
src/fda/: __init__.py  getdata.py
tests/: test_fda.py
