[tool.poetry]
name = "fda"
version = "0.1.0"
description = "Useful functions for financial data analysis."
authors = ["Ralf Kellner"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
