[tool.poetry]
name = "fda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
requests = "^2.31.0"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
bs4 = "^0.0.2"
tqdm = "^4.66.1"
scrapy = "^2.11.0"
requests-html = "^0.10.0"
nltk = "^3.8.1"
yfinance = "^0.2.36"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
